* All languages are equal! You can now reorder keyboards. In keyboard selection page - long press an enabled keyboard and drag it.
* Now you can use multiple dictionaries on a given keyboard. Long-press ENTER for options.
* Brought alternative layouts: DVORAK, COLEMAK, Terminal, and Compact English.
* Localization update: CA, FR, EU.

More here: https://github.com/AnySoftKeyboard/AnySoftKeyboard/milestone/81