@@ -1,0 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="#2481A8"/>
+    <corners android:topLeftRadius="@dimen/yochees_radius_key_corner" android:topRightRadius="@dimen/yochees_radius_key_corner" android:bottomLeftRadius="0px" android:bottomRightRadius="0px"/>
+</shape>
